--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
+    <script src="https://kit.fontawesome.com/840a2c45fe.js" crossorigin="anonymous"></script>
     <script src="./dist/main.js" defer></script>
     <title>Stranger's Things</title>
   </head>
